--- a/BACKEND/vercel.json
+++ b/BACKEND/vercel.json
@@ -11,6 +11,16 @@
         "src": "/(.*)",
         "dest": "index.js"
       }
+    ],
+    "headers": [
+      {
+        "source": "/api/(.*)",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "http://localhost:4200" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
+        ]
+      }
     ]
   }
   
